--- a/what-i-am-up-to.html
+++ b/what-i-am-up-to.html
@@ -28,7 +28,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Your Name</p>
+        <p>Joshua Dietzenbach</p>
     </footer>
 </body>
 </html>
