--- a/projects.html
+++ b/projects.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,12 +23,19 @@
 
     <section>
         <h2>My Projects</h2>
-        <p>Here’s a link to some of the projects I’ve worked on:</p>
-        <a href="https://jmdietz12.github.io/lmc2700website//">My Projects</a>
+        <p>
+            <a href="https://jmdietz12.github.io/lmc2700website//" class="text-link" title="Click Here For My Portfolio!">
+                <span class="base-text">&#128193;</span>
+                <span class="hover-text">&#128194;</span>
+            </a>
+        </p>
+        
     </section>
 
     <footer>
-        <p>Joshua Dietzenbach</p>
+        <h3>Joshua Dietzenbach
+            <a href="https://www.linkedin.com/in/joshua-dietzenbach-69b396328/" class="fa fa-linkedin"></a>
+        </h3>
     </footer>
 </body>
 </html>
