--- a/what-i-am-up-to.html
+++ b/what-i-am-up-to.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,13 +23,15 @@
 
     <section>
         <h2>My Current Projects and Passions</h2>
-        <p>I'm currently a part of the Georgia Tech Running Club.</p>
-        <p>I'm also a current member of the Buzz Commitee.</p>
+        <p>I'm currently a part of the Georgia Tech Running Club. <img src="running.JPG" alt="running photo" id="running"></p>
+        
         <p>I also am passionate about playing the alto saxophone and video editing.</p>
     </section>
 
     <footer>
-        <p>Joshua Dietzenbach</p>
+        <h3>Joshua Dietzenbach
+            <a href="https://www.linkedin.com/in/joshua-dietzenbach-69b396328/" class="fa fa-linkedin"></a>
+        </h3>
     </footer>
 </body>
 </html>
