--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,13 +23,16 @@
 
     <section>
         <h2>Hi, I'm Joshua Dietzenbach </h2>
+        <img src="portrait.jpg" alt="personal photo" id="portrait">
         <p>I'm a Computational Media major at the Georgia Institute of Technology.
             <br>I am passionate about coding, creating projects and media, and collaborating with others!
         </p>
     </section>
 
     <footer>
-        <p>Joshua Dietzenbach</p>
+        <h3>Joshua Dietzenbach
+            <a href="https://www.linkedin.com/in/joshua-dietzenbach-69b396328/" class="fa fa-linkedin"></a>
+        </h3>
     </footer>
 </body>
 </html>
