--- a/other.html
+++ b/other.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Other</h1>
+        <h1>Skills</h1>
         <nav>
             <ul>
                 <li><a href="index.html">About Me</a></li>
@@ -49,7 +50,9 @@
     </section>
 
     <footer>
-        <p>Joshua Dietzenbach</p>
+        <h3>Joshua Dietzenbach
+            <a href="https://www.linkedin.com/in/joshua-dietzenbach-69b396328/" class="fa fa-linkedin"></a>
+        </h3>
     </footer>
 </body>
 </html>
