--- a/experience.html
+++ b/experience.html
@@ -21,15 +21,26 @@
     </header>
 
     <section>
-        <h2>My Experience</h2>
-        <p><b>Places I’ve worked:</b></p>
-        <p>Old Hickory Golf Club<br>
-            Day One Pizza<br>
-            Columbus Public Library</p>
-        <p><b>Volunteering:</b></p>
-        <p>Salvation Army Bell Ringing<br>
-            Loving Lunches<br>
-            Red Cross Blood Drives</p>
+        <h2>My Experience &#128188;</h2>
+        <h3><b>Places I’ve worked:</b></h3>
+        <p  class="jobs" title=" Golf Shop Attendant, June-Aug. 2024
+•	Complete transactions for golf times and merchandise
+•	Answer phones to take tee-times and questions
+•	Cash-out register and close shop at the end of day">Old Hickory Golf Club &#9971;</p>
+        <p class="jobs" title="Customer Service June 2021 - Aug. 2023
+•	Answer phones in an efficient, respectful, and well-constructed manner
+•	Receive orders and transfer food to customers at front counter and in dining room
+•	Prepare ingredients for the making of pizza">Day One Pizza &#127829;</p>
+        <p class="jobs" title="Summer Library Assistant June-Aug. 2022
+•	Check in, check out, and transfer books for patron use
+•	Assist patrons with computers, finding books, and other technology
+•	Assist with preparation of summer programs">Public Library &#128216;</p>
+        <h3><b>Volunteering:</b></h3>
+        <p class="jobs" title="Ring bells at Christmas to help raise money for people in need">Salvation Army Bell Ringing &#128276;</p>
+        <p class="jobs" title="Prepare, bag, and serve food for area families in need">Loving Lunches &#129386;</p>
+        <p class="jobs" title="Check in and assist donors in giving blood">Red Cross Blood Drives &#129656;</p>
+        <br>
+        <h5>Hover Over Each Individual For Description!</h5>
     </section>
 
     <footer>
