--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     </header>
 
     <section>
-        <h2>Hi, I'm Joshua Dietzenbach </h2>
+        <h2>Hi, I'm Joshua Dietzenbach &#128075;</h2>
         <img src="portrait.jpg" alt="personal photo" id="portrait">
-        <p>I'm a Computational Media major at the Georgia Institute of Technology.
+        <p>I'm a Computational Media &#128187; major at the Georgia Institute of Technology &#128029;.
             <br>I am passionate about coding, creating projects and media, and collaborating with others!
         </p>
     </section>
