--- a/other.html
+++ b/other.html
@@ -21,28 +21,31 @@
     </header>
 
     <section>
-        <h2>Skills</h2>
-        <h4>Some Skills I have:</h4>
-        <p><b>Coding Skills</b><br><br>
-        Python-Intermediate<br>
-        HTML-Beginner<br>
-        CSS-Beginner<br>
-        Java-Beginner<br>
+        <h2>Skills &#128736;</h2>
+        <p><b>Coding Language Skills &#128187;</b><br>
+            Python- Intermediate<br>
+            Java- Intermediate<br>
+            HTML- Beginner<br>
+            CSS- Beginner<br>
         </p>
-        <p><b>Computer Design Software Skills</b><br>
-            Solid Works-Intermediate<br>
-            OnShape-Beginner<br>
-            Inventor-Beginner<br>
-            Vcarve Pro-Beginner<br>
-            MarkBot-Beginner<br>
-            Ultimaker-Beginner<br>
+        <br>
+        <p><b>Computer Design Software Skills &#128640;</b><br>
+            Solid Works- Intermediate<br>
+            OnShape- Beginner<br>
+            Inventor- Beginner<br>
+            Vcarve Pro- Beginner<br>
+            MarkBot- Beginner<br>
+            Ultimaker- Beginner<br>
         </p>
-        <p><b>Computer Application Skills</b><br>
-        Microsoft Excel-Intermediate<br>
-        G Suites-Intermediate<br>
-        Microsoft Word-Beginner<br>
+        <br>
+        <p><b>Computer Application Skills &#128221;</b><br>
+            Microsoft Excel- Intermediate<br>
+            G Suites- Intermediate<br>
+            Microsoft Word- Beginner<br>
+            OpenAI- Beginner<br>
         </p>
-        <p><b>Personal Skills</b><br>
+        <br>
+        <p><b>Personal Skills &#128513;</b><br>
             Highly Motivated<br>
             Great Communicator<br>
             Detail Oriented<br>
