--- a/projects.html
+++ b/projects.html
@@ -21,9 +21,9 @@
     </header>
 
     <section>
-        <h2>My Projects</h2>
+        <h2>My Projects &#128193;</h2>
         <p>
-            <a href="https://jmdietz12.github.io/lmc2700website//" class="text-link" title="Click Here For My Portfolio!">
+            <a href="https://jmdietz12.github.io/lmc2700website//" class="text-link" title="Click Here For My Projects!">
                 <span class="base-text">&#128193;</span>
                 <span class="hover-text">&#128194;</span>
             </a>
