--- a/what-i-am-up-to.html
+++ b/what-i-am-up-to.html
@@ -21,10 +21,12 @@
     </header>
 
     <section>
-        <h2>My Current Projects and Passions</h2>
-        <p>I'm currently a part of the Georgia Tech Running Club. <img src="running.JPG" alt="running photo" id="running"></p>
-        
-        <p>I also am passionate about playing the alto saxophone and video editing.</p>
+        <h2>My Current Projects and Passions &#128197;</h2>
+        <p id="description">I'm currently a part of the Georgia Tech Running Club, which involves both Cross Country and Track and Field.</p>
+        <img src="running.JPG" alt="running photo" id="portrait">
+        <p id="description">I am passionate about playing the alto saxophone and looking to reincorporate it into my life.</p>
+        <img src="saxaphone.JPG" alt="saxaphone photo" id="portrait">
+        <p id="description">When I have time, I do video editing, make social media posts, and other creative projects in my passions about running, baseball, videogames, etc.</p>
     </section>
 
     <footer>
