Updating New Info

--- a/experience.html
+++ b/experience.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html">Portfolio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="what-i-am-up-to.html">What I Am Up To</a></li>
                 <li><a href="other.html">Skills</a></li>
@@ -23,18 +23,18 @@
     <section>
         <h2>My Experience &#128188;</h2>
         <h3><b>Places I’ve worked:</b></h3>
-        <p  class="jobs" title=" Golf Shop Attendant, June-Aug. 2024
-•	Complete transactions for golf times and merchandise
-•	Answer phones to take tee-times and questions
-•	Cash-out register and close shop at the end of day">Old Hickory Golf Club &#9971;</p>
-        <p class="jobs" title="Customer Service, June 2021 - Aug. 2023
-•	Answer phones in an efficient, respectful, and well-constructed manner
-•	Receive orders and transfer food to customers at front counter and in dining room
-•	Prepare ingredients for the making of pizza">Day One Pizza &#127829;</p>
-        <p class="jobs" title="Summer Library Assistant, June-Aug. 2022
-•	Check in, check out, and transfer books for patron use
-•	Assist patrons with computers, finding books, and other technology
-•	Assist with preparation of summer programs">Columbus Public Library &#128216;</p>
+        <p  class="jobs" title=" Golf Shop Attendant, May-Aug. 2024 & 2025
+•	Completed transactions for golf times and merchandise
+•	Answered and returned phone calls for tee-times and questions
+•	Opened and closed clubhouse, including directing and preparing for other employees">Old Hickory Golf Club &#9971;</p>
+        <p class="jobs" title="Customer Service June 2021 - Aug. 2023
+•	Answered phones in an efficient, respectful, and well-constructed manner
+•	Received orders and transferred food to customers at front counter and in dining room
+•	Prepared ingredients for the making of pizza">Day One Pizza &#127829;</p>
+        <p class="jobs" title="Summer Library Assistant June-Aug. 2022
+•	Checked in, checked out, and transferred books for patron use
+•	Assisted patrons with computers, finding books, and other technology
+•	Assisted with preparation of summer programs">Public Library &#128216;</p>
         <h3><b>Volunteering:</b></h3>
         <p class="jobs" title="Ring bells at Christmas to help raise money for people in need">Salvation Army Bell Ringing &#128276;</p>
         <p class="jobs" title="Prepare, bag, and serve food for area families in need">Loving Lunches &#129386;</p>
