--- a/other.html
+++ b/other.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html">Portfolio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="what-i-am-up-to.html">What I Am Up To</a></li>
                 <li><a href="other.html">Skills</a></li>
@@ -25,11 +25,14 @@
         <p><b>Coding Language Skills &#128187;</b><br>
             Python- Intermediate<br>
             Java- Intermediate<br>
-            HTML- Beginner<br>
+            HTML- Intermediate<br>
             CSS- Beginner<br>
+            JavaScript- Beginner<br>
+            C#- Beginner<br>
+            C- Beginner<br>
         </p>
         <br>
-        <p><b>Computer Design Software Skills &#128640;</b><br>
+        <p><b>Technical Tools &#128640;</b><br>
             Solid Works- Intermediate<br>
             OnShape- Beginner<br>
             Inventor- Beginner<br>
@@ -38,11 +41,15 @@
             Ultimaker- Beginner<br>
         </p>
         <br>
-        <p><b>Computer Application Skills &#128221;</b><br>
+        <p><b>Software &#128221;</b><br>
+            Github- Intermediate<br>
             Microsoft Excel- Intermediate<br>
-            G Suites- Intermediate<br>
+            Google Workspace- Intermediate<br>
+            Unity- Beginner<br>
+            Google Cloud- Beginner<br>
             Microsoft Word- Beginner<br>
-            OpenAI- Beginner<br>
+            Canva- Beginner<br>
+            Figma- Beginner<br>
         </p>
         <br>
         <p><b>Personal Skills &#128513;</b><br>
