--- a/projects.html
+++ b/projects.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Projects</h1>
+        <h1>Portfolio</h1>
         <nav>
             <ul>
                 <li><a href="index.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html">Portfolio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="what-i-am-up-to.html">What I Am Up To</a></li>
                 <li><a href="other.html">Skills</a></li>
@@ -21,9 +21,9 @@
     </header>
 
     <section>
-        <h2>My Projects &#128193;</h2>
+        <h2>My Portfolio &#128193;</h2>
         <p>
-            <a href="https://jmdietz12.github.io/lmc2700website//" class="text-link" title="Click Here For My Projects!">
+            <a href="https://jmdietz12.github.io/portfolio/" class="text-link" title="Click Here For My Portfolio!">
                 <span class="base-text">&#128193;</span>
                 <span class="hover-text">&#128194;</span>
             </a>
