--- a/what-i-am-up-to.html
+++ b/what-i-am-up-to.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html">Portfolio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="what-i-am-up-to.html">What I Am Up To</a></li>
                 <li><a href="other.html">Skills</a></li>
@@ -24,9 +24,11 @@
         <h2>My Current Projects and Passions &#128197;</h2>
         <p id="description">I'm currently a part of the Georgia Tech Running Club, which involves both Cross Country and Track and Field.</p>
         <img src="running.JPG" alt="running photo" id="portrait">
-        <p id="description">I am passionate about playing the alto saxophone and looking to reincorporate it into my life.</p>
-        <img src="saxaphone.JPG" alt="saxaphone photo" id="portrait">
-        <p id="description">When I have time, I do video editing, make social media posts, and other creative projects in my passions about running, baseball, videogames, etc.</p>
+        <!-- <p id="description">I am passionate about playing the alto saxophone and looking to reincorporate it into my life.</p>
+        <img src="saxaphone.JPG" alt="saxaphone photo" id="portrait"> -->
+        <p id="description">I'm currently making a game for the Game Boy Advance in C as well as filming and editing a short film!</p>
+        <img src="gba.png" alt="gba photo" id="portrait">
+        <p id="description">In my spare time, I do video editing, make social media posts, and other creative projects in my passions about running, baseball, videogames, etc.</p>
     </section>
 
     <footer>
