--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">About Me</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="projects.html">Portfolio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="what-i-am-up-to.html">What I Am Up To</a></li>
                 <li><a href="other.html">Skills</a></li>
